name: elm-smuggle
version: 0.4.0
synopsis: Smuggle git dependencies into your Elm apps
license: MIT
license-file: LICENSE
author: Jordan Mackie
maintainer: jmackie@protonmail.com
copyright: Copyright (C) 2018 Jordan Mackie
homepage: https://github.com/jmackie/elm-smuggle/
bug-reports: https://github.com/jmackie/elm-smuggle/issues
build-type: Simple
extra-doc-files: README.md
cabal-version: >=1.10

flag release
    description: Enable optimisations
    default: False

executable elm-smuggle
    hs-source-dirs:
        src
    main-is:
        Main.hs
    other-modules:
        Elm
    build-depends:
        base                  >= 4.11   && < 4.12
      , aeson                 >= 1.3.1  && < 1.4
      , ansi-terminal         >= 0.8.1  && < 0.9
      , binary                >= 0.8.5  && < 0.9
      , bytestring            >= 0.10.8 && < 0.11
      , containers            >= 0.5.11 && < 0.6
      , exceptions            >= 0.10.0 && < 0.11
      , mtl                   >= 2.2.2  && < 2.3
      , path                  >= 0.6.1  && < 0.7
      , path-io               >= 1.3.3  && < 1.4
      , process               >= 1.6.3  && < 1.7
      , text                  >= 1.2.3  && < 1.3
      , unordered-containers  >= 0.2.9  && < 0.3
    ghc-options:
        -Weverything
        -fno-warn-missing-import-lists
        -fno-warn-safe
        -fno-warn-unsafe
        -fno-warn-all-missed-specialisations
    if flag(release)
        ghc-options:
            -O
            -threaded
            -rtsopts
            -with-rtsopts=-N
    default-language:
        Haskell2010
    default-extensions:
        NoImplicitPrelude
