name: elm-smuggle
version: 0.4.0
synopsis: Smuggle git dependencies into your Elm apps
description:
    Add git dependencies to Elm 0.19 projects.

    This script can add Elm package projects to the global Elm package cache.
    Once in the cache these packages can be installed with  the usual @elm-install@.

license: MIT
license-file: LICENSE
author: Jordan Mackie
maintainer: jmackie@protonmail.com
copyright: Copyright (C) 2018 Jordan Mackie
category: Command Line Tool
homepage: https://github.com/jmackie/elm-smuggle/
bug-reports: https://github.com/jmackie/elm-smuggle/issues
build-type: Simple
tested-with: GHC == 8.4.4
cabal-version: 1.18
extra-doc-files:
    README.md
data-files:
    usage.txt


source-repository head
    type: git
    location: https://github.com/jmackie/elm-smuggle/


flag release
    description: Enable optimisations
    default: False


executable elm-smuggle
    hs-source-dirs:
        elm-smuggle
    main-is:
        Main.hs
    other-modules:
        Options
        Command
        Elm
        Git
        Paths_elm_smuggle
    build-depends:
        base               >= 4.11   && < 4.12
      , aeson
      , ansi-terminal
      , async
      , binary
      , bytestring
      , containers
      , exceptions
      , network-uri
      , path
      , path-io
      , process
      , template-haskell
      , text
    ghc-options:
        -Weverything
        -fno-warn-missing-import-lists
        -fno-warn-safe
        -fno-warn-unsafe
        -fno-warn-all-missed-specialisations
    if flag(release)
        ghc-options:
            -threaded
            -rtsopts
            -with-rtsopts=-N
    default-language:
        Haskell2010
    default-extensions:
        NoImplicitPrelude
