name: elm-smuggle
version: 0.6.1
synopsis: Smuggle git dependencies into your Elm apps
description:
    Add git dependencies to Elm 0.19 applications.

    This script can add Elm package projects to the global Elm package cache.
    Once in the cache these packages can be installed with  the usual @elm-install@.

license: MIT
license-file: LICENSE
author: Jordan Mackie
maintainer: jmackie@protonmail.com
copyright: Copyright (C) 2018 Jordan Mackie
category: Command Line Tool
homepage: https://github.com/jmackie/elm-smuggle
bug-reports: https://github.com/jmackie/elm-smuggle/issues
build-type: Simple
tested-with: GHC == 8.4.4
cabal-version: 1.18
extra-doc-files:
    README.md
data-files:
    usage.txt


source-repository head
    type: git
    location: https://github.com/jmackie/elm-smuggle


flag release
    description: Enable optimisations
    default: False


executable elm-smuggle
    hs-source-dirs:
        elm-smuggle
    main-is:
        Main.hs
    other-modules:
        Options
        Command
        Elm
        Git
        Paths_elm_smuggle
    build-depends:
        base                 >= 4.11   && < 5
      , aeson                >= 1.3.1 && < 1.4
      , ansi-terminal        >= 0.8.1 && < 0.9
      , async                >= 2.2.1 && < 2.3
      , binary               >= 0.8.5 && < 0.9
      , bytestring           >= 0.10.8 && < 0.11
      , containers           >= 0.5.11 && < 0.6
      , directory            >= 1.3 && < 2
      , exceptions           >= 0.10.0 && < 0.11
      , network-uri          >= 2.6.1 && < 2.7
      , path                 >= 0.6.1 && < 0.7
      , path-io              >= 1.3.3 && < 1.4
      , process              >= 1.6.3 && < 1.7
      , template-haskell     >= 2.13.0 && < 2.14
      , text                 >= 1.2.3 && < 1.3
    ghc-options:
        -Weverything
        -fno-warn-missing-import-lists
        -fno-warn-safe
        -fno-warn-unsafe
        -fno-warn-all-missed-specialisations
    if flag(release)
        ghc-options:
            -threaded
            -rtsopts
            -with-rtsopts=-N
    default-language:
        Haskell2010
    default-extensions:
        NoImplicitPrelude
